--- a/.htaccess
+++ b/.htaccess
@@ -1,4 +1,2 @@
-  RewriteRule ^(.*)$   index.php?uri=/$1    [NC,L,QSA]
-  # with QSA flag (query string append),
-  # forces the rewrite engine to append a query string part of the
-  # substitution string to the existing string, instead of replacing it.
+RewriteEngine on
+RewriteRule ^([a-zA-Z0-9_-]+)$ index.php?uri=$1 [QSA]
